# cnc-polarplotter

./: .gitignore  README.md  polar_precision.ipynb  requirements.txt
controller/test_stepper/: test_stepper.ino
docs/: existing-works.md
gcode_sender/: example.py  main.py  pyproject.toml
model/: Nema17mount_Isolated.STL  PenHolder-11.5.stl  PenHolder-12.5.stl  PenHolder-9.5.stl  README.md  servo-lift v1.stl
sender/: README.md  example.py  pyproject.toml
sender/gcode_robot/: common.py  example.py  gcode.py  main.py  utils.py
sender/tests/: test_gcode.py  test_utils.py
sender/tests/data/: t0_simple_oval.ngc
test_data/: t0_simple_oval.ngc  t1_cat_filled.ngc  t1_cat_outline.ngc
